[gd_scene load_steps=13 format=3 uid="uid://dvj28a05aryxr"]

[ext_resource type="Script" path="res://Scripts/laser_beam.gd" id="1_43vk4"]
[ext_resource type="PackedScene" uid="uid://dkxfa1lhbipx6" path="res://Scenes/Towers/end_particles.tscn" id="2_cg70e"]
[ext_resource type="PackedScene" uid="uid://bn8vemtlm8yro" path="res://Scenes/Towers/beam_particles.tscn" id="3_r0qj8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_rh11b"]
resource_local_to_scene = true
flip_faces = true
top_radius = 0.03
bottom_radius = 0.03
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0b303"]
transparency = 1
albedo_color = Color(0.866667, 0.0745098, 0, 0.843137)
emission_enabled = true
emission = Color(0.866667, 0.0745098, 0, 1)
emission_energy_multiplier = 10.0

[sub_resource type="Curve" id="Curve_hjoim"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.25, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_mn5q4"]
curve = SubResource("Curve_hjoim")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3oyw8"]
resource_local_to_scene = true
spread = 80.0
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_mn5q4")

[sub_resource type="Curve" id="Curve_u5qrn"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.25, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_53yd1"]
curve = SubResource("Curve_u5qrn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qck7p"]
resource_local_to_scene = true
emission_shape = 3
emission_box_extents = Vector3(0.03, 0.1, 0.03)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 2.0
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_53yd1")
collision_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_701cc"]

[node name="LaserBeam" type="RayCast3D"]
script = ExtResource("1_43vk4")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_rh11b")
surface_material_override/0 = SubResource("StandardMaterial3D_0b303")

[node name="EndParticles" parent="." instance=ExtResource("2_cg70e")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_3oyw8")

[node name="BeamParticles" parent="." instance=ExtResource("3_r0qj8")]
process_material = SubResource("ParticleProcessMaterial_qck7p")

[node name="Temp" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -1, 0)
mesh = SubResource("BoxMesh_701cc")
